--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
             android:label="@string/title_activity_maps" />
         <activity android:name=".ui.profile.ChangeAddressActivity" />
         <activity android:name=".ui.profile.ChangeEmailActivity" />
-        <activity android:name=".ui.profile.ChangePassword" />
+        <activity android:name=".ui.profile.ChangePasswordActivity" />
         <activity android:name=".ui.profile.ChangeProfileActivity" />
         <activity android:name=".ui.product.ProductDetailActivity" />
         <activity android:name=".ui.login.LoginActivity" />
